src/app/components/Gallery/_index.scss
.Gallery {
  overflow: hidden;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-user-drag: none;
  user-drag: none;
}

.Gallery-layout {
  position: relative;
  margin-left: auto;
  margin-right: auto;
  padding-left: $layout-fluid-padding;
  padding-right: $layout-fluid-padding;

  @media #{$mq-not-lg} {
    .is-mosaic & {
      padding-left: 0;
      padding-right: 0;
      width: 100%;
    }
  }

  @media #{$mq-sm} {
    width: calc(100% - 2.8125rem);
  }

  @media #{$mq-md} {
    width: cells(10);
  }

  @media #{$mq-lg} {
    padding-left: $layout-fixed-padding;
    padding-right: $layout-fixed-padding;
    width: $layout-fixed;
  }

  .Gallery:not(.is-mosaic) & > .Caption {
    padding-left: 0;
    padding-right: 0;
    background-color: transparent;
  }

  .is-mosaic & > .Caption {
    @media #{$mq-lg} {
      padding-top: 0;
      padding-left: 0;
      padding-right: 0;
      background-color: transparent;
    }
  }
}

.Gallery-pane {
  margin: 0 -.46875rem;

  .is-mosaic & {
    margin: 0 -.125rem;
  }

  @media #{$mq-md} {
    margin: 0 -.9375rem;

    .is-mosaic & {
      margin: 0 -.25rem;
    }
  }

  @media #{$mq-lg} {
    margin: 0 -1.25rem;

    .is-mosaic & {
      margin: 0 -.3125rem;
    }
  }
}

.Gallery-images {
  display: flex;
  position: relative;
  transition: transform .125s ease-out;
  will-change: transform;

  @media #{$mq-lg} {
    transition-duration: .25s;
  }

  .is-mosaic & {
    flex-wrap: wrap;
    transform: none !important;
    transition-duration: 0s;
  }
}

.Gallery-image {
  display: flex;
  flex-direction: column;
  flex: 0 0 100%;
  overflow: hidden;
  position: relative;
  padding: 0 .46875rem;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-user-drag: none;
  user-drag: none;

  .is-mosaic & {
    opacity: 1;
    margin-bottom: .25rem;
    padding: 0 .125rem;
  }

  .Gallery:not(.is-mosaic) & {
    flex: 0 0 100% !important;
  }

  @media #{$mq-md} {
    padding: 0 .9375rem;

    .is-mosaic & {
      margin-bottom: .5rem;
      padding: 0 .25rem;
    }
  }

  @media #{$mq-lg} {
    padding: 0 1.25rem;

    .is-mosaic & {
      margin-bottom: .625rem;
      padding: 0 .3125rem;
    }
  }

  .Picture {
    cursor: pointer;
    cursor: -webkit-grab;
    cursor: -moz-grab;
    cursor: grab;
    transition: opacity .125s;
    will-change: opacity;

    @media #{$mq-lg} {
      transition-duration: .25s;
    }

    .is-mosaic & {
      display: none;
    }

    .is-moving & {
      cursor: -webkit-grabbing;
      cursor: -moz-grabbing;
      cursor: grabbing;
      transition-duration: 0s;
    }
  }

  .Picture + .Picture {
    display: none;
    cursor: initial;

    .is-mosaic & {
      display: block;
    }
  }

  .Caption {
    opacity: 0;
    margin-left: -$layout-fluid-padding;
    margin-right: -$layout-fluid-padding;
    background-color: transparent;
    pointer-events: none;
    transition: opacity .125s;
    will-change: opacity;

    @media #{$mq-lg} {
      margin-left: -$layout-fixed-padding;
      transition-duration: .25s;
    }
  }

  &.is-active .Caption {
    opacity: 1;
    transition-delay: .125s;
    pointer-events: all;

    @media #{$mq-lg} {
      transition-delay: .25s;
    }
  }

  .is-moving & .Caption {
    opacity: 0;
    transition-delay: 0s;
    transition-duration: .125s;
  }

  .is-mosaic & .Caption {
    opacity: 0;
    position: absolute;
    bottom: 0;
    margin-left: 0;
    max-width: calc(100% - .25rem);
    min-height: 0;
    background-color: $color-black-transparent-60;
    color: $color-grey-50;
    pointer-events: none;

    @media #{$mq-sm} {
      display: none;
    }

    @media #{$mq-md} {
      max-width: calc(100% - .5rem);
    }

    @media #{$mq-lg} {
      max-width: calc(100% - .625rem);
    }
  }

  .is-mosaic &:hover .Caption {
    opacity: 1;
    pointer-events: all;
  }

  .is-mosaic & .Caption-attribution {
    color: $color-grey-300;
  }
}

.Gallery-controls {
  display: flex;
  justify-content: space-between;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  padding: 0 $layout-fluid-padding;
  width: 100%;
  pointer-events: none;

  @media #{$mq-lg} {
    padding: 0 $layout-fixed-padding;
  }

  .is-mosaic & {
    display: none;
  }
}

.Gallery-index {
  padding: 0 .8rem;
  min-width: 3.5rem;
  height: $size-control;
  background-color: $color-black-transparent-60;
  color: $color-white;
  font-family: $font-sans;
  font-size: .8125rem;
  line-height: $size-control;
  letter-spacing: .05rem;
  text-align: right;

  .is-mosaic & {
    display: none;
  }
}

.Gallery-steps {
  pointer-events: all;
}

[class*="Gallery-step-"] {
  padding: 0;
  border: none;
  width: $size-control;
  height: $size-control;
  background-color: $color-black-transparent-60;
  background-image: url(gallery/step.svg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: 100%;
  vertical-align: bottom;
  transition: opacity .25s;
  will-change: opacity;
}

.Gallery-step-next {
  transform: scale(-1, 1);
  margin-left: $size-control-margin;
}

.is-at-start .Gallery-step-prev,
.is-at-end .Gallery-step-next {
  opacity: .2;
  cursor: disabled;
  pointer-events: none;
}

